# stellar-friends

./: .gitignore  Cargo.toml  README.md
examples/: friends.yaml  labels.yaml  output_with_label.json  output_without_label.json
src/: cli.rs  feed_fetcher.rs  main.rs  models.rs  parser.rs  transformer.rs
