[package]
name = "stellar-friends"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = "0.13.2"
feed-rs = "2.3.1"
serde-saphyr = "0.0.24"
